# KALE-Cult

./: .gitignore  README.md  eslint.config.mjs  package-lock.json  package.json
kale-contracts/: Cargo.toml  README.md  package.json
kale-contracts/compiled/: README.md
kale-contracts/docs/: PROTOCOL.md
kale-contracts/scripts/: build.sh  deploy.sh  interact.sh
kale-cult/: package-lock.json  package.json
kale-cult/src/app/: page.tsx
kale-cult/src/app/profile/: page.tsx
kale-cult/src/app/stake-done/: page.tsx
kale-cult/src/components/: navbar.tsx
kale-cult/src/data/: farms.ts
src/app/: layout.tsx
src/app/profile/: page.tsx
src/app/stake/: page.tsx
src/app/stake-done/: page.tsx
src/app/test-wallet/: page.tsx
src/components/: footer.tsx  navbar.tsx
src/contexts/: WalletContext.tsx
src/lib/: stellar-service.ts
src/lib/kale-api/: config.ts  index.ts  kale-contract.ts  stellar.ts  wallet.ts
