[package]
name = "kale-sc"
version = "1.0.0"
edition = "2021"
publish = false
authors = ["KALE Protocol"]
description = "KALE Smart Contract - Proof-of-Work Farming Protocol on Stellar"
license = "MIT"

[lib]
crate-type = ["cdylib"]
doctest = false

[features]
testutils = []

[dependencies]
soroban-sdk = "22.0.7"
soroban-fixed-point-math = "1.3.0"

[dev-dependencies]
soroban-sdk = { version = "22.0.7", features = ["testutils"] }
tiny-keccak = { version = "2.0.2", features = ["keccak"] }
hex = "0.4.3"
stellar-strkey = "0.0.9"
ed25519-dalek = "2.1.1"

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true